# R6TacticsBoard

./: .gitattributes  .gitignore  README.md  pyproject.toml
assets/maps/: create_json.sh
assets/maps/bank/: map.json
assets/maps/border/: map.json
assets/maps/chalet/: map.json
assets/maps/close-quarter/: map.json
assets/maps/clubhouse/: map.json
assets/maps/consulate/: map.json
assets/maps/emerald-plains/: map.json
assets/maps/fortress/: map.json
assets/maps/hereford-base/: map.json
assets/maps/kafe-dostoyevsky/: map.json
assets/maps/nighthaven-labs/: map.json
assets/maps/oregon/: map.json
assets/maps/skyscraper/: map.json
assets/maps/stadium-alpha/: map.json
assets/maps/tower/: map.json
assets/maps/yacht/: map.json
assets/operators/: index.json
data/: README.md
data/esports/: README.md
data/esports/scripts/: scrape_liquipedia.py
docs/: README.md  architecture.md  assets.md  packaging.md
docs/architecture/: README.md  codebase_map.md  editor_workflow.md  overview.md  overview_2_5d_plan.md  roadmap.md  theme.md
docs/distribution/: README.md  packaging.md
docs/resources/: README.md  assets.md  destructible_surfaces.md
scripts/: build_exe.ps1
src/assets/gadgets/: README.md  download_log.md  index.json
src/assets/maps/: download_all.sh  download_blueprints.js  download_maps.sh  index.json
src/assets/operators/: download_ops.py  index.json
src/r6_tactics_board/: README.md  __init__.py  __main__.py  app.py  main.py
src/r6_tactics_board/application/: README.md  playback.py
src/r6_tactics_board/domain/: README.md  (+2 more)
(+263 files in other folders)
